# matrix-drug-list

./: .gitignore  README.md
drug-list/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  session_store.db
drug-list/.viz/: stats.json
drug-list/conf/base/: catalog.yml  parameters.yml  parameters_evaluate_version_change.yml  parameters_generate_orange_book_list.yml  parameters_store_previous_versions.yml
drug-list/data/01_raw/: Russian State Register of Medicines.xlsx  indian_approvals.jsp  indian_drugs.csv  purplebook-data-download.csv  purplebook-data-download_2025_04.csv  russian_drugs_test.xlsx
drug-list/data/02_intermediate/: drug-list-with-allergen-tags.tsv  drug-list-with-category-tags.tsv  drug-list-with-metallic-salt-tags.tsv  drug-list-with-no-therapeutic-value-tags-small-test.tsv  drug-list-with-no-therapeutic-value-tags.tsv  drug-list-with-radioisotope-tags.tsv  drug-list-with-tags-cleaned.tsv  drug_list_corrected_approval_tags.xlsx  drug_list_corrected_approval_tags_europe.xlsx  drug_list_corrected_approval_tags_usa.xlsx  ema_exclusions.xlsx  ema_list.xlsx  ema_split_exclusions.xlsx  fda_ob_list.xlsx  pmda_exclusions.xlsx  pmda_list.xlsx  pmda_split_exclusions.xlsx  purple-book-list.xlsx  purplebook-standardized.xlsx  purplebook-with-approval-tags.xlsx  purplebook-with-combo-therapy-tags.xlsx  purplebook-with-curies.xlsx  purplebook-with-ingredient-ids.xlsx  purplebook-with-ingredients.xlsx
drug-list/data/03_primary/: .gitkeep  drugList.tsv  drugList_final.tsv  drug_list_with_smiles.xlsx  merged_drugList.tsv  (+3 more)
(+479 files in other folders)
